# yarn

./: .ghc.environment.aarch64-darwin-9.14.1  README.md  cabal.project  circuits.cabal  readme.md  tcat.cabal  test-accstate-loop.hs  test-lexer-stages.hs  test-loop-extract-real.hs  test-loop-extract.hs  test-mealy-composition.hs  test-mealy-stages.hs  test-traced-fn-simple.hs  test-traced-identity.hs  traced.cabal  yarn.cabal
app/: parser-speed.hs  speed-yarn.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.14.1/: package.cache  traced-0.1.0.0-inplace.conf
docs/narrative/: 01-stack-language.md  02-gadt.md  03-circuit.md  04-hyper.md  05-tensor.md  06-rwr.md  07-future.md
examples/: elgot-abacus.md  hyper-basic.md  memoization.md  parser.md  pipes.md  resource-io.md  theory-delim.md  while.md  yaya.md
other/: 04-hyper.md  RunMealy-1000-MeasureTime-StatAverage.perf  axioms-hyp-symbols (2).md  axioms-hyp-symbols.md  axioms-hyp.md  circuit-agent-impl.md  circuit-agent.md  circuit-back.md  circuit-bfs.md  circuit-categorical.md  circuit-parser.md  echo-server.md  fileio.md  goi-pipeline.md  hyp-narrative.md  hyp-parser.md  hyp-traced-bridge.md  lazy-knot-tying.md  loop-examples.md  resource-file.md  state-parser.md  weighted-search.md  yarn-todo.md
src/: Adapt.hi  Adapt.hs  Circuit.hs  Hyp.hs  HypWu.hs  LensS.hs  Lexer.hs  LexerTraced.hs  Log.hs  MealyM.hs  Net.hs  Para.hs  RunMealy.hs  SysL.hs  ToHypH.hs  Traced.hs  TracedQ.hs  TracedT.hs  Traces.hs
src/Circuit/: GoI.hs  Hyper.hs  Traced.hs
src/Circuit/GoI/: Example.hs  Fixed.hs
src/Hyp/: Channel.hs
src/Traced/: Mealy.hs
test/: test-adapt.hi  test-adapt.hs  test-co-simple.hs  traced-gadt-examples.md
