cabal-version: 3.0
name:          traced
version:       0.1.0.0
synopsis:      Free traced monoidal category over any base category
license:       BSD-3-Clause
build-type:    Simple

library
  hs-source-dirs: src
  exposed-modules:
    Hyp
    Traced
    MealyM
  build-depends:
    base       >= 4.18,
    mtl        >= 2.2,
    profunctors >= 5.6,
    transformers >= 0.6
  default-language:   GHC2021
  default-extensions:
    UnicodeSyntax
  ghc-options: -Wall -Wno-unused-imports -Wno-name-shadowing
