cabal-version: 3.0
name: yarn
version: 0.1.0.0
synopsis: Free traced monoidal category over any base category
license: BSD-3-Clause
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
    Hyp
    Hyp.Channel
    Log
    Traced
    Traces

  build-depends:
    aeson >=2.0,
    base >=4.18,
    bytestring,
    deepseq,
    free-category,
    harpie,
    mealy,
    mtl >=2.2,
    profunctors >=5.6,
    text >=1.2,
    these,

  default-language: GHC2024
  default-extensions:
    UnicodeSyntax

  ghc-options:
    -Wall
    -Wno-unused-imports
    -Wno-name-shadowing
    -O2
